--- a/chatDemo-master/chatDemo/en.lproj/MainStoryboard.storyboard
+++ b/chatDemo-master/chatDemo/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--First View Controller - First-->
@@ -55,7 +55,7 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="yrh-qk-8vb" id="zBp-w8-5r0"/>
+                            <outlet property="dataSource" destination="yrh-qk-8vb" id="9RW-2c-zZU"/>
                             <outlet property="delegate" destination="yrh-qk-8vb" id="pth-xY-mJY"/>
                         </connections>
                     </tableView>
@@ -64,7 +64,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x7G-KO-ukz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1035" y="59"/>
+            <point key="canvasLocation" x="1059" y="-5"/>
         </scene>
         <!--Chat Room View Controller - Chat Room-->
         <scene sceneID="TRM-lR-lFL">
